# Applied_Deep_Learning

./: pyproject.toml
Course_Material/: Outline.txt
Course_Material/Week_1/Week_1_Lab/: 1_Lecture 2 [Lecture Demo] PyTorch and Gradient Descent.ipynb
Course_Material/Week_2/Week_2_Lecture_1/: Lecture 3 [Lecture Demo] Image Classification.ipynb
Instructional_Notebooks/: Lecture 2 [Lecture Demo] PyTorch intro Iris.ipynb  [Lab Demo] pytorch - Exercises 2 Solutions.ipynb  [Lab Demo] pytorch - Exercises 2.ipynb
adl/: Lecture 2 [Lecture Demo] PyTorch and Gradient Descent.ipynb  Lecture 2 [Lecture Demo] PyTorch intro Iris.ipynb  Pytorch_lab_1.ipynb  [Lab Demo] pytorch - Exercises 2.ipynb
